--- a/homepage.html
+++ b/homepage.html
@@ -9,28 +9,35 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/stylesheet.css">
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
   
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
     <a class="navbar-brand" href="/homepage.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
+
         <ul class="navbar-nav">
+
             <li class="nav-item">
-              <a class="nav-link" href="/register.html">Sign up</a>
-            </li>
+                <a class="nav-link" href="/login.html">Login</a>
+              </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="/products.html">Art work</a>
+              <a class="nav-link" href="/register.html">Sign-up</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
+              <a class="nav-link" href="/products.html">Gallary</a>
             </li>
+          
             <li class="nav-item">
                 <a class="nav-link" href="/contact.html">Contact us</a>
             </li>
+
           </ul>
     </div>  
   </nav>
@@ -41,19 +48,27 @@
 </head>
 
 <main>
-        <section>
-            <div id="background"></div>
+    <section data-spy="scroll" data-target=".homepage" data-offset="50">
+            <div id="bg-cover"></div>
 
-                <div id="homepage">
+                <div id="homepage  fixed-top">
                     <h1> Welcome to Twain's Art Gallery</h1>
+                    <p>Where creativity meets chaos</p>
                 </div>
         </section>
 
-        <section id="">
-
-        </section>
     </main>
     <footer>
+        
+        <div id="copyright">&copy; Twain's work</div>
+
+        <div id="social-links">
+
+            <a href="http://facebook.com">Facebook</a>
+
+            <a href="http://twitter.com">Twitter</a>
+
+        </div>
 
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
