--- a/products.html
+++ b/products.html
@@ -1,28 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/stylesheet.css">
 
     <title>Document</title>
 </head>
+
 <body>
-    <img src="images/IMG_2845.JPG" width="50">
-    <img src="images/IMG_3014.JPG" width="50">
-    <img src="images/IMG_3708.JPG" width="50">
-    <img src="images/IMG_3726.JPG" width="50">
-    <img src="images/IMG_3807.JPG" width="50">
-    <img src="images/IMG_3828.jpg" width="50">
-    <img src="images/IMG_3833.JPG" width="50">
+    <nav class="navbar navbar-expand-lrg bg-dark navbar-dark fixed-top">
+        <a class="navbar-brand" href="/homepage.html">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+
+            <ul class="navbar-nav">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/login.html">Login</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/register.html">Sign-up</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/products.html">Gallary</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact.html">Contact us</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <main class="mt-5">
+
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-md-6 my-auto" style="background-color:black;">
+                    <div class="art p-3"> 
+                        <img src="images/IMG_2845.JPG" width="100">
+                        <p class="art-name">Basit</p>
+                     </div>
+                </div>
+
+                <div class="col-md-6 my-auto" style=" background-color:black;">
+                    <div class="art p-3">
+                        <img src="images/IMG_3014.JPG" width="100">
+                        <p class="art-name">Inside Out</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-md-6 my-auto" style="background-color:black;">
+                    <div class="art p-3">
+                        <img src="images/IMG_3708.JPG" width="100">
+                        <p class="art-name">Fierce</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 my-auto" style="background-color:black;">
+                    <div class="art p-3">
+                        <img src="images/IMG_3726.JPG" width="100">
+                        <p class="art-name">Elegance</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-md-6 my-auto" style="background-color:black;">
+                    <div class="art p-3">
+                        <img src="images/IMG_3807.JPG" width="100">
+                        <p class="art-name">Mr. Fueguo</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 my-auto" style="background-color:black;">
+                    <div class="art p-3">
+                        <img src="images/IMG_3828.jpg" width="100">
+                        <p class="art-name">Number1 Swordsman</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <section class="page-row" id="art-table">
+            <h3 class="product">More information about Twain's Art Work</h3>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Medium</th>
+                    <th>Size</th>
+                    <th>Price</th>
+                </tr>
+
+                <tr>
+                    <td>Basit</td>
+                    <td>Pencil</td>
+                    <td>9'' × 12''</td>
+                    <td>$25.00</td>
+                </tr>
+
+                <tr>
+                    <td>Inside Out</td>
+                    <td>Black Ink</td>
+                    <td>11'' × 14''</td>
+                    <td>$50.00</td>
+                </tr>
+
+                <tr>
+                    <td>Fierce</td>
+                    <td>Pencil</td>
+                    <td>11'' × 14''</td>
+                    <td>$50.00</td>
+
+                </tr>
+
+                <tr>
+                    <td>Elegance</td>
+                    <td>Pencil</td>
+                    <td>11'' × 14''</td>
+                    <td>$55.00</td>
+
+                </tr>
+
+                <tr>
+                    <td>Mr. Fuego</td>
+                    <td>Markers/Ink</td>
+                    <td>14'' × 17''</td>
+                    <td>$75.00</td>
+
+                </tr>
+
+                <tr>
+                    <td>Number1 Swordsman</td>
+                    <td>Marker/Ink</td>
+                    <td>14'' × 17''</td>
+                    <td>$75.00</td>
+
+                </tr>
 
 
+            </table>
+        </section>
 
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 
 </body>
+
 </html>
