--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lrg bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="/homepage.html">Home</a>
+        <a class="navbar-brand" href="./homepage.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,19 +22,19 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/login.html">Login</a>
+                    <a class="nav-link" href="./login.html">Login</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/register.html">Sign-up</a>
+                    <a class="nav-link" href="./register.html">Sign-up</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/products.html">Gallary</a>
+                    <a class="nav-link" href="./products.html">Gallary</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact us</a>
+                    <a class="nav-link" href="./contact.html">Contact us</a>
                 </li>
 
             </ul>
@@ -48,14 +48,14 @@
             <div class="row">
                 <div class="col-md-6 my-auto" style="background-color:black;">
                     <div class="art p-3"> 
-                        <img src="images/IMG_2845.JPG" width="100">
+                        <img src="./images/IMG_2845.JPG" width="100">
                         <p class="art-name">Basit</p>
                      </div>
                 </div>
 
                 <div class="col-md-6 my-auto" style=" background-color:black;">
                     <div class="art p-3">
-                        <img src="images/IMG_3014.JPG" width="100">
+                        <img src="./images/IMG_3014.JPG" width="100">
                         <p class="art-name">Inside Out</p>
                     </div>
                 </div>
@@ -65,14 +65,14 @@
 
                 <div class="col-md-6 my-auto" style="background-color:black;">
                     <div class="art p-3">
-                        <img src="images/IMG_3708.JPG" width="100">
+                        <img src="./images/IMG_3708.JPG" width="100">
                         <p class="art-name">Fierce</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 my-auto" style="background-color:black;">
                     <div class="art p-3">
-                        <img src="images/IMG_3726.JPG" width="100">
+                        <img src="./images/IMG_3726.JPG" width="100">
                         <p class="art-name">Elegance</p>
                     </div>
                 </div>
@@ -82,14 +82,14 @@
 
                 <div class="col-md-6 my-auto" style="background-color:black;">
                     <div class="art p-3">
-                        <img src="images/IMG_3807.JPG" width="100">
+                        <img src="./images/IMG_3807.JPG" width="100">
                         <p class="art-name">Mr. Fueguo</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 my-auto" style="background-color:black;">
                     <div class="art p-3">
-                        <img src="images/IMG_3828.jpg" width="100">
+                        <img src="./images/IMG_3828.jpg" width="100">
                         <p class="art-name">Number1 Swordsman</p>
                     </div>
                 </div>
