--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lrg bg-dark navbar-dark fixed-top">
-        <a class="navbar-brand" href="/homepage.html">Home</a>
+        <a class="navbar-brand" href="./homepage.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,19 +24,19 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/login.html">Login</a>
+                    <a class="nav-link" href="./login.html">Login</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/register.html">Sign-up</a>
+                    <a class="nav-link" href="./register.html">Sign-up</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/products.html">Gallary</a>
+                    <a class="nav-link" href="./products.html">Gallary</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact us</a>
+                    <a class="nav-link" href="./contact.html">Contact us</a>
                 </li>
 
             </ul>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="form-group">
-                <label for="email">Email:</label>
+                <label for="email">Email:</label>git
                 <input type="text" class="form-control" id="email" placeholder="Enter valid email" name="email"
                     required>
                 <div class="valid-feedback">Valid.</div>
